Started again + fix layout bugs

--- a/src/components/Header/styles/box.scss
+++ b/src/components/Header/styles/box.scss
@@ -1,32 +1,34 @@
 .box {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  //   height: 10rem;
+  width: 24rem;
+  background-color: white;
+  padding: 0.5rem;
+  border-radius: 0.8rem;
+  margin: 0 2rem;
 
-    height: 10rem;
-    width: 24rem;
-    background-color: white;
-    padding: 0.5rem;
-    border-radius: 0.8rem;
-    margin: 0 2rem;
+  &__title {
+    font-size: 1.8rem;
+    font-weight: 500;
+    color: rgba(black, 0.87);
+    margin: 1rem;
+  }
 
-    &__title {
-        font-size: 1.8rem;
-        font-weight: 500;
-        color: rgba(black, 0.87);
-    }
+  &__state {
+    font-size: 1.4rem;
+    text-transform: uppercase;
+    font-weight: 400;
+    line-height: 1.2rem;
+    color: rgba(black, 0.6);
+    margin: 1rem;
+  }
 
-    &__state {
-        font-size: 1.4rem;
-        text-transform: uppercase;
-        font-weight: 400;
-        line-height: 1.2rem;
-        color: rgba(black, 0.6);
-    }
-
-    &__num {
-        font-size: 3.6rem;
-        font-weight: bolder;
-        color: var(--primary-purple);
-    }
+  &__num {
+    font-size: 3.6rem;
+    font-weight: bolder;
+    color: var(--primary-purple);
+    margin: 1rem;
+  }
 }
