--- a/src/pages/ListActions/style.scss
+++ b/src/pages/ListActions/style.scss
@@ -46,7 +46,8 @@
     letter-spacing: 0.2rem;
 
     padding: 1rem 5rem;
-
+    margin-left: 2rem;
+    margin-top: 1.4rem;
     border: none;
     border-radius: 4rem;
 
